prodMetadata/src/objects/Media_Request__c.object
<CustomObject>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Submitted for Approval</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Submitted for Approval</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Completed_Press_Hit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Completed Press Hit</label>
        <referenceTo>Press_Hit__c</referenceTo>
        <relationshipLabel>Media Requests</relationshipLabel>
        <relationshipName>Media_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <formula>Reporter_Producer__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <formula>Reporter_Producer__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Contacted__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Date Contacted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deadline__c</fullName>
        <label>Deadline</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <label>Duration</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Format__c</fullName>
        <label>Format</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>One on One</fullName>
                </value>
                <value>
                    <fullName>Group Interview</fullName>
                </value>
                <value>
                    <fullName>Written Statement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Justification__c</fullName>
        <label>Justification</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Live__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Live?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medium__c</fullName>
        <label>Medium</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Radio</fullName>
                </value>
                <value>
                    <fullName>TV</fullName>
                </value>
                <value>
                    <fullName>Print</fullName>
                </value>
                <value>
                    <fullName>Online Publication</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Press_Outlet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Press Outlet</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Press_Outlet__c</field>
                <operation>equals</operation>
                <value>true</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Media Requests</relationshipLabel>
        <relationshipName>Media_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proposed_Date_and_Time__c</fullName>
        <label>Proposed Date and Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Proposed_Spokesperson__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Proposed Spokesperson</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Media Requests (Proposed Spokesperson)</relationshipLabel>
        <relationshipName>Media_Requests_Spokesperson</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recommended_Action__c</fullName>
        <label>Recommended Action</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Related_to_program__c</fullName>
        <label>Related to Program(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>COV</fullName>
                </value>
                <value>
                    <fullName>Employment Workshops</fullName>
                </value>
                <value>
                    <fullName>Events</fullName>
                </value>
                <value>
                    <fullName>Jobs Tool</fullName>
                </value>
                <value>
                    <fullName>Local Leaders</fullName>
                </value>
                <value>
                    <fullName>NGIB</fullName>
                </value>
                <value>
                    <fullName>Referral Program</fullName>
                </value>
                <value>
                    <fullName>Storm the Hill</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reporter_Producer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reporter / Producer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Media Requests</relationshipLabel>
        <relationshipName>Media_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Spokeperson_Link__c</fullName>
        <formula>HYPERLINK( &quot;/&quot;+Proposed_Spokesperson__r.Id,Proposed_Spokesperson__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Spokeperson Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Deferred</fullName>
                </value>
                <value>
                    <fullName>Pending other staff input</fullName>
                </value>
                <value>
                    <fullName>Awaiting Publication</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Topics__c</fullName>
        <label>Topics</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Employment</fullName>
                </value>
                <value>
                    <fullName>Gala</fullName>
                </value>
                <value>
                    <fullName>IAVA Feature</fullName>
                </value>
                <value>
                    <fullName>LGBT Service members</fullName>
                </value>
                <value>
                    <fullName>Mental Health</fullName>
                </value>
                <value>
                    <fullName>Military COLA</fullName>
                </value>
                <value>
                    <fullName>MST</fullName>
                </value>
                <value>
                    <fullName>New GI Bill</fullName>
                </value>
                <value>
                    <fullName>PTSD</fullName>
                </value>
                <value>
                    <fullName>Red Tape Report</fullName>
                </value>
                <value>
                    <fullName>RRRP</fullName>
                </value>
                <value>
                    <fullName>Shutdown</fullName>
                </value>
                <value>
                    <fullName>STH2014</fullName>
                </value>
                <value>
                    <fullName>Suicide</fullName>
                </value>
                <value>
                    <fullName>Summer Storm</fullName>
                </value>
                <value>
                    <fullName>VA Backlog</fullName>
                </value>
                <value>
                    <fullName>Vets Day</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Media Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Reporter_Producer__c</columns>
        <columns>Press_Outlet__c</columns>
        <columns>Proposed_Spokesperson__c</columns>
        <columns>Deadline__c</columns>
        <columns>Medium__c</columns>
        <columns>Priority__c</columns>
        <columns>Topics__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Backlog</fullName>
        <columns>NAME</columns>
        <columns>Deadline__c</columns>
        <columns>Date_Contacted__c</columns>
        <columns>Press_Outlet__c</columns>
        <columns>Reporter_Producer__c</columns>
        <columns>Status__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Topics__c</field>
            <operation>includes</operation>
            <value>VA Backlog</value>
        </filters>
        <label>Backlog</label>
    </listViews>
    <nameField>
        <label>Media Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Media Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>